Worked on wishlist internal server issue, added new images for preloaded

--- a/Savio/SAOfferList/SAOfferListViewController.xib
+++ b/Savio/SAOfferList/SAOfferListViewController.xib
@@ -15,8 +15,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SAOfferListViewController" customModule="Savio" customModuleProvider="target">
             <connections>
+                <outlet property="bottomview" destination="UA4-gr-ZH8" id="kyT-m8-9h0"/>
                 <outlet property="closeLbl" destination="9Kl-A0-gsj" id="7jA-bX-RSu"/>
                 <outlet property="tblView" destination="5db-mO-Sls" id="lOH-aW-Ean"/>
+                <outlet property="tblViewHt" destination="QBn-bn-3MM" id="M3b-BE-aQe"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -28,6 +30,9 @@
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5db-mO-Sls">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="559"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="559" id="QBn-bn-3MM"/>
+                    </constraints>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="5iz-Be-2sT"/>
                         <outlet property="delegate" destination="-1" id="ek6-DP-7Tu"/>
@@ -89,6 +94,12 @@
                 <constraint firstItem="UA4-gr-ZH8" firstAttribute="top" secondItem="5db-mO-Sls" secondAttribute="bottom" id="foV-Yj-Drv"/>
                 <constraint firstAttribute="bottom" secondItem="UA4-gr-ZH8" secondAttribute="bottom" constant="1" id="llI-yK-81W"/>
             </constraints>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="foV-Yj-Drv"/>
+                </mask>
+            </variation>
+            <point key="canvasLocation" x="232" y="261"/>
         </view>
     </objects>
 </document>
