--- a/Savio/SAOfferList/SAOfferListViewController.xib
+++ b/Savio/SAOfferList/SAOfferListViewController.xib
@@ -18,7 +18,7 @@
                 <outlet property="bottomview" destination="UA4-gr-ZH8" id="kyT-m8-9h0"/>
                 <outlet property="closeLbl" destination="9Kl-A0-gsj" id="7jA-bX-RSu"/>
                 <outlet property="tblView" destination="5db-mO-Sls" id="lOH-aW-Ean"/>
-                <outlet property="tblViewHt" destination="QBn-bn-3MM" id="M3b-BE-aQe"/>
+                <outlet property="tblViewBottomSpace" destination="sY6-CT-agj" id="euZ-dZ-i3d"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -30,9 +30,6 @@
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5db-mO-Sls">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="559"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="559" id="QBn-bn-3MM"/>
-                    </constraints>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="5iz-Be-2sT"/>
                         <outlet property="delegate" destination="-1" id="ek6-DP-7Tu"/>
@@ -93,9 +90,11 @@
                 <constraint firstItem="UA4-gr-ZH8" firstAttribute="top" secondItem="5db-mO-Sls" secondAttribute="bottom" id="duz-Uk-Wil"/>
                 <constraint firstItem="UA4-gr-ZH8" firstAttribute="top" secondItem="5db-mO-Sls" secondAttribute="bottom" id="foV-Yj-Drv"/>
                 <constraint firstAttribute="bottom" secondItem="UA4-gr-ZH8" secondAttribute="bottom" constant="1" id="llI-yK-81W"/>
+                <constraint firstAttribute="bottom" secondItem="5db-mO-Sls" secondAttribute="bottom" constant="41" id="sY6-CT-agj"/>
             </constraints>
             <variation key="default">
                 <mask key="constraints">
+                    <exclude reference="duz-Uk-Wil"/>
                     <exclude reference="foV-Yj-Drv"/>
                 </mask>
             </variation>
