--- a/Savio/CancelSavingPlan/SACancelSavingViewController.xib
+++ b/Savio/CancelSavingPlan/SACancelSavingViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -148,7 +148,7 @@
                     </variation>
                 </view>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aid-gQ-1Sd">
-                    <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                    <rect key="frame" x="0.0" y="63" width="600" height="536"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your savings plan has been cancelled" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHp-XT-doJ">
                             <rect key="frame" x="35" y="30" width="530" height="66"/>
@@ -162,7 +162,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DLv-21-PrS">
-                            <rect key="frame" x="30" y="289" width="540" height="40"/>
+                            <rect key="frame" x="30" y="289" width="540" height="37"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lKj-8R-VCW">
                                     <rect key="frame" x="0.0" y="0.0" width="540" height="35"/>
@@ -188,7 +188,7 @@
                             <constraints>
                                 <constraint firstItem="lKj-8R-VCW" firstAttribute="top" secondItem="DLv-21-PrS" secondAttribute="top" id="Ft7-iE-A0S"/>
                                 <constraint firstAttribute="trailing" secondItem="lKj-8R-VCW" secondAttribute="trailing" id="aNK-yl-rhb"/>
-                                <constraint firstAttribute="height" constant="40" id="pRO-8U-tYP"/>
+                                <constraint firstAttribute="height" constant="37" id="pRO-8U-tYP"/>
                                 <constraint firstItem="lKj-8R-VCW" firstAttribute="leading" secondItem="DLv-21-PrS" secondAttribute="leading" id="qkk-9z-1oq"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
@@ -228,9 +228,9 @@
                 <constraint firstItem="aid-gQ-1Sd" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Fs3-8B-NzT"/>
                 <constraint firstAttribute="bottom" secondItem="unf-fN-0ho" secondAttribute="bottom" id="RUa-zC-1Sc"/>
                 <constraint firstAttribute="trailing" secondItem="unf-fN-0ho" secondAttribute="trailing" id="box-iq-pjN"/>
-                <constraint firstItem="aid-gQ-1Sd" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="pLn-W9-wxO"/>
+                <constraint firstItem="aid-gQ-1Sd" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="63" id="pLn-W9-wxO"/>
                 <constraint firstItem="unf-fN-0ho" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="pOY-Co-dOb"/>
-                <constraint firstAttribute="bottom" secondItem="aid-gQ-1Sd" secondAttribute="bottom" id="t0d-z7-p2w"/>
+                <constraint firstAttribute="bottom" secondItem="aid-gQ-1Sd" secondAttribute="bottom" constant="1" id="t0d-z7-p2w"/>
             </constraints>
             <point key="canvasLocation" x="125" y="289"/>
         </view>
