--- a/Savio/ProgressView/SAGroupProgressViewController.xib
+++ b/Savio/ProgressView/SAGroupProgressViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -36,7 +36,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zer-qR-OdC">
-                    <rect key="frame" x="0.0" y="64" width="600" height="40"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="40"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EvH-8r-1Fh">
                             <rect key="frame" x="0.0" y="2" width="300" height="38"/>
@@ -133,7 +133,7 @@
                     </constraints>
                 </view>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6kg-fA-cco">
-                    <rect key="frame" x="0.0" y="104" width="600" height="446"/>
+                    <rect key="frame" x="0.0" y="40" width="600" height="510"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="alJ-QQ-JNZ">
                             <rect key="frame" x="0.0" y="0.0" width="600" height="450"/>
@@ -229,25 +229,19 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="Zer-qR-OdC" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="3V7-am-ZXB"/>
+                <constraint firstItem="Zer-qR-OdC" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="3V7-am-ZXB"/>
                 <constraint firstAttribute="bottom" secondItem="FFb-Rt-XbG" secondAttribute="bottom" id="6kG-jY-sBM"/>
                 <constraint firstItem="FFb-Rt-XbG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="94N-vl-eIe"/>
                 <constraint firstItem="FFb-Rt-XbG" firstAttribute="top" secondItem="6kg-fA-cco" secondAttribute="bottom" constant="-2" id="Gir-QY-zUM"/>
-                <constraint firstItem="6kg-fA-cco" firstAttribute="top" secondItem="Zer-qR-OdC" secondAttribute="bottom" id="MJr-BS-joV"/>
                 <constraint firstAttribute="trailing" secondItem="Zer-qR-OdC" secondAttribute="trailing" id="Txp-t0-lUp"/>
                 <constraint firstAttribute="trailing" secondItem="6kg-fA-cco" secondAttribute="trailing" id="Y3j-l2-iU0"/>
                 <constraint firstItem="6kg-fA-cco" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ZZs-2D-1nO"/>
                 <constraint firstItem="6kg-fA-cco" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ciP-KR-zIZ"/>
                 <constraint firstAttribute="trailing" secondItem="FFb-Rt-XbG" secondAttribute="trailing" id="dXw-Np-dCl"/>
                 <constraint firstItem="Zer-qR-OdC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="lGL-jR-OvR"/>
-                <constraint firstItem="6kg-fA-cco" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="104" id="v8P-Qk-bTy"/>
+                <constraint firstItem="6kg-fA-cco" firstAttribute="top" secondItem="Zer-qR-OdC" secondAttribute="bottom" id="mbt-Iv-ewW"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <variation key="default">
-                <mask key="constraints">
-                    <exclude reference="MJr-BS-joV"/>
-                </mask>
-            </variation>
             <point key="canvasLocation" x="343" y="328"/>
         </view>
     </objects>
