--- a/Savio/ProgressView/SAProgressViewController.xib
+++ b/Savio/ProgressView/SAProgressViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -85,7 +85,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MjK-1W-Tag">
-                    <rect key="frame" x="0.0" y="64" width="600" height="40"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="40"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="koD-Rh-BR2">
                             <rect key="frame" x="302" y="0.0" width="300" height="38"/>
@@ -129,7 +129,7 @@
                     </variation>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My saving plan" textAlignment="center" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NOE-MR-nos">
-                    <rect key="frame" x="20" y="109" width="560" height="40"/>
+                    <rect key="frame" x="20" y="45" width="560" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="2qC-zV-lgU"/>
                     </constraints>
@@ -176,7 +176,7 @@
                     </connections>
                 </button>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4DY-Gb-RdS">
-                    <rect key="frame" x="0.0" y="154" width="600" height="330"/>
+                    <rect key="frame" x="0.0" y="90" width="600" height="394"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="inc-tQ-bV5"/>
@@ -202,7 +202,7 @@
                 <constraint firstItem="NOE-MR-nos" firstAttribute="top" secondItem="MjK-1W-Tag" secondAttribute="bottom" constant="5" id="pXQ-gg-KrO"/>
                 <constraint firstAttribute="trailing" secondItem="gfi-x6-Zkx" secondAttribute="trailing" constant="30" id="qfR-ME-Ft3"/>
                 <constraint firstItem="4DY-Gb-RdS" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="sDY-mP-OKe"/>
-                <constraint firstItem="MjK-1W-Tag" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="uIk-y5-JSL"/>
+                <constraint firstItem="MjK-1W-Tag" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="uIk-y5-JSL"/>
                 <constraint firstItem="Ovz-Yp-HeJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="wcF-F1-52V"/>
                 <constraint firstItem="KCf-nP-6gP" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="y4d-pY-ViU"/>
                 <constraint firstAttribute="trailing" secondItem="Ovz-Yp-HeJ" secondAttribute="trailing" constant="30" id="yPt-AR-wZq"/>
