--- a/Savio/StatView/SAStatViewController.xib
+++ b/Savio/StatView/SAStatViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -83,7 +83,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="utN-ZS-awE">
-                    <rect key="frame" x="0.0" y="64" width="600" height="40"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="40"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C4s-No-D8p">
                             <rect key="frame" x="302" y="2" width="300" height="38"/>
@@ -249,13 +249,13 @@
                     </variation>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3pJ-dh-CAm" userLabel="Graph">
-                    <rect key="frame" x="0.0" y="104" width="600" height="313"/>
+                    <rect key="frame" x="0.0" y="40" width="600" height="377"/>
                     <subviews>
                         <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zx6-CM-USF">
-                            <rect key="frame" x="15" y="40" width="570" height="258"/>
+                            <rect key="frame" x="15" y="40" width="570" height="322"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jmE-Ve-npa" userLabel="ContentView">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="258"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="322"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="600" id="dvW-Ub-t8M"/>
@@ -272,7 +272,7 @@
                             </constraints>
                         </scrollView>
                         <slider opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="fnS-6P-Qus">
-                            <rect key="frame" x="38" y="278" width="534" height="36"/>
+                            <rect key="frame" x="38" y="342" width="534" height="36"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -321,21 +321,15 @@
                 <constraint firstAttribute="trailing" secondItem="lsX-Nh-UJc" secondAttribute="trailing" id="Jo4-ZT-dw8"/>
                 <constraint firstItem="Rjy-iN-UVw" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="LLH-UA-fvt"/>
                 <constraint firstItem="3pJ-dh-CAm" firstAttribute="top" secondItem="utN-ZS-awE" secondAttribute="bottom" id="MIc-EQ-rEI"/>
-                <constraint firstItem="utN-ZS-awE" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="Q0K-mM-iit"/>
+                <constraint firstItem="utN-ZS-awE" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Q0K-mM-iit"/>
                 <constraint firstItem="3pJ-dh-CAm" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ta5-mk-ftS"/>
                 <constraint firstAttribute="trailing" secondItem="3pJ-dh-CAm" secondAttribute="trailing" id="YrH-Xo-b15"/>
                 <constraint firstItem="lsX-Nh-UJc" firstAttribute="top" secondItem="3pJ-dh-CAm" secondAttribute="bottom" id="fD2-dl-jAy"/>
                 <constraint firstItem="utN-ZS-awE" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="gNI-gt-TZp"/>
                 <constraint firstItem="lsX-Nh-UJc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="gpd-Tf-RV5"/>
                 <constraint firstAttribute="bottom" secondItem="Rjy-iN-UVw" secondAttribute="bottom" id="lcn-AR-JRc"/>
-                <constraint firstItem="lsX-Nh-UJc" firstAttribute="top" secondItem="3pJ-dh-CAm" secondAttribute="bottom" constant="40" id="mcH-tC-hQr"/>
                 <constraint firstItem="Rjy-iN-UVw" firstAttribute="top" secondItem="lsX-Nh-UJc" secondAttribute="bottom" constant="1" id="va5-ap-YIA"/>
             </constraints>
-            <variation key="default">
-                <mask key="constraints">
-                    <exclude reference="mcH-tC-hQr"/>
-                </mask>
-            </variation>
             <point key="canvasLocation" x="171" y="189"/>
         </view>
     </objects>
