--- a/Savio/EditUserInfo/SAEditUserInfoViewController.xib
+++ b/Savio/EditUserInfo/SAEditUserInfoViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -64,7 +64,7 @@
                     </constraints>
                 </view>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ibo-dK-tSI">
-                    <rect key="frame" x="0.0" y="44" width="600" height="556"/>
+                    <rect key="frame" x="0.0" y="40" width="600" height="556"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hb0-2Z-sAF">
                             <rect key="frame" x="0.0" y="0.0" width="600" height="630"/>
@@ -134,7 +134,7 @@
             <constraints>
                 <constraint firstItem="75a-bn-pNY" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="36F-gf-L6z"/>
                 <constraint firstAttribute="trailing" secondItem="75a-bn-pNY" secondAttribute="trailing" id="8Al-35-a8y"/>
-                <constraint firstItem="Ibo-dK-tSI" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="44" id="JId-1z-fco"/>
+                <constraint firstItem="Ibo-dK-tSI" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="JId-1z-fco"/>
                 <constraint firstItem="Ibo-dK-tSI" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Wtn-km-svj"/>
                 <constraint firstItem="75a-bn-pNY" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="aaN-PY-UY1"/>
                 <constraint firstAttribute="bottom" secondItem="Ibo-dK-tSI" secondAttribute="bottom" id="l5n-0X-sKe"/>
